--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@mliebelt/pgn-parser": "^1.4.0",
     "@react-hook/window-size": "^2.0.5",
     "@sentry/browser": "^5.15.5",
     "@testing-library/jest-dom": "^4.2.4",
@@ -63,7 +62,7 @@
     "deep-copy": "^1.4.2",
     "deep-object-diff": "^1.1.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#room-relay-activity",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#room-relay-activity-output",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
