--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "deep-copy": "^1.4.2",
     "deep-object-diff": "^1.1.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#room-relay-activity-output",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#room-relay-activity",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
