--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "deep-copy": "^1.4.2",
     "deep-object-diff": "^1.1.0",
     "deox": "^3.2.1",
-    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#add-watch-resource",
+    "dstnd-io": "https://github.com/dstnd/dstnd-io.git#v0.2.2",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
