--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/pubsub-js": "^1.8.1",
     "@types/react": "^16.9.0",
     "@types/react-div-100vh": "^0.3.0",
+    "@types/react-document-title": "^2.0.5",
     "@types/react-dom": "^16.9.0",
     "@types/react-jss": "^10.0.0",
     "@types/react-linkify": "^1.0.0",
@@ -88,6 +89,7 @@
     "react": "^16.13.1",
     "react-chessground": "^1.5.0",
     "react-div-100vh": "^0.5.6",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-iconly": "^2.2.3",
