--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "hex-to-rgba": "^2.0.1",
     "howler": "^2.2.1",
     "humanize-duration": "^3.22.0",
-    "io-ts": "2.2.10",
-    "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.3",
+    "io-ts": "2.2.16",
+    "io-ts-isodatetime": "https://github.com/GabrielCTroia/io-ts-isodatetime.git#v0.0.5",
     "io-ts-types": "^0.5.10",
     "is-ua-webview": "^1.0.5",
     "js-logger": "^1.6.0",
@@ -119,7 +119,7 @@
     "use-debounce": "^7.0.0",
     "use-debounced-effect": "^1.2.0",
     "use-previous": "^1.1.0",
-    "wargame-board": "https://github.com/andreitopli/wargame-board.git#4211e8d",
+    "wargame-board": "https://gabrielctroia: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@github.com/movesthatmatter/wargame-board.git#v0.2.1",
     "webfontloader": "^1.6.28",
     "window-or-global": "^1.0.1"
   },
