--- a/package.json
+++ b/package.json
@@ -130,8 +130,7 @@
     "start": "react-scripts start",
     "start:staging": "env-cmd -f .env.staging yarn start",
     "build": "react-scripts build",
-    "postbuild": "react-snapshot && yarn make-static",
-    "make-static": "mkdir build/watch && mv build/watch.html build/watch/index.html && echo 'Done make-static' && ls -l build/watch",
+    "postbuild": "react-snapshot",
     "build:staging": "env-cmd -f .env.staging react-scripts build; react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
