--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "chess.js": "^0.10.3",
     "chessground": "^7.9.3",
     "chessops": "0.7.1",
-    "dstnd-io": "https://gabrielctroia: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@github.com/movesthatmatter/chessroulette-io.git#2881fdc",
+    "chessroulette-io": "https://gabrielctroia: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@github.com/movesthatmatter/chessroulette-io.git#add-tournaments",
     "chunk": "^0.0.3",
     "classnames": "^2.2.6",
     "csstype": "^2.6.10",
@@ -67,6 +67,7 @@
     "deep-copy": "^1.4.2",
     "deep-object-diff": "^1.1.0",
     "deox": "^3.2.1",
+    "dstnd-io": "https://gabrielctroia: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@github.com/movesthatmatter/chessroulette-io.git#add-tournaments",
     "env-cmd": "^10.1.0",
     "eslint-plugin-prettier": "3.1.3",
     "fp-ts": "^2.8.2",
